--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -84,10 +84,16 @@ jobs:
       BUNDLE_GEMFILE: ${{ matrix.gemfile }}
     steps:
       - uses: actions/checkout@v2
+      - name: Setup Bundler 1.x for Rails 4.x
+        if: ${{ matrix.gemfile == 'gemfiles/Gemfile-rails-4-1' || matrix.gemfile == 'gemfiles/Gemfile-rails-4-2' }}
+        run: echo "Bundler version set to $BUNDLER_VERSION"
+        env:
+          BUNDLER_VERSION: 1.17.1
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true # runs bundle install and caches installed gems automatically
+          bundler: ${{ env.BUNDLER_VERSION || 'latest' }}
       - uses: supercharge/mongodb-github-action@1.3.0
         if: ${{ matrix.env == 'DEVISE_ORM=mongoid' }}
       - run: bundle exec rake
